fixing dashboard and styling scrollbar for webkit

--- a/preconen-core/resources/css/app.css
+++ b/preconen-core/resources/css/app.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 /* @import "~dropify/dist/css/dropify.min.css"; */
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(73, 94, 87, 0.4);
+    border: 1px solid #cacaca;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: rgb(73, 94, 87);
+}
+::-webkit-scrollbar-thumb:hover {
+    border-radius: 8px;
+    background-color: rgba(73, 94, 87, 0.9);
+}
